@@ -81,6 +81,7 @@ following names for their contribution to the product.
 * Jidanni
 * Jimmy Xu
 * Karun Dambietz
+* Kim Hyun-Joon
 * liangent
 * Lucas Garczewski
 * Louperivois
